force-app/main/default/staticresources/python/Disappear/src/objects/PublicationPreFprReviewer__c.object
<CustomObject>
    <fields>
        <fullName>Appear_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appear Role</label>
        <referenceTo>Appear_Role__c</referenceTo>
        <relationshipLabel>PublicationPreFprReviewer</relationshipLabel>
        <relationshipName>PublicationPreFprReviewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreFprReviewer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Pre FPR Reviewer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PublicationPreFprReviewer</relationshipLabel>
        <relationshipName>PublicationPreFprReviewer</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Indication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Indication</label>
        <referenceTo>ProductIndication__c</referenceTo>
        <relationshipLabel>PublicationPreFprReviewer</relationshipLabel>
        <relationshipName>PublicationPreFprReviewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>PublicationPreFprReviewer</relationshipLabel>
        <relationshipName>PublicationPreFprReviewer</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Publication PreFPR Reviewer</label>
    <nameField>
        <displayFormat>PubPreFpr-{00000000}</displayFormat>
        <label>Publication PreFPR Reviewer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publication Pre FPR Reviewers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>